syntax = "proto3";

package natsrpc.example;
option go_package = "github.com/byebyebruce/natsrpc/example;example";

import "natsrpc.proto";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message Empty {}

// 测试
service Greeting {
  rpc Hello (HelloRequest) returns (HelloReply) {}
}

// 测试
service GreetingToAll {
  rpc HelloToAll (HelloRequest) returns (Empty) {
    option (natsrpc.publish) = true; // publish
  }
}
